--- a/Project_sem_3/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Project_sem_3/Views/Account/ExternalLoginConfirmation.cshtml
@@ -287,7 +287,9 @@
         background: -webkit-linear-gradient(bottom left, #fc2c77 0%, #6c4079 100%);
         background: -moz-linear-gradient(bottom left, #fc2c77 0%, #6c4079 100%);
         background: -o-linear-gradient(bottom left, #fc2c77 0%, #6c4079 100%);
-        background: linear-gradient(to top right, #fc2c77 0%, #6c4079 100%);
+        /*background: linear-gradient(to top right, #fc2c77 0%, #6c4079 100%);*/
+        background: linear-gradient(to top right, #bed9f1 0%, #89c8f7 100%);
+
     }
 
     /* ==========================================================================
