--- a/Project_sem_3/Views/HomeInsurance/Order.cshtml
+++ b/Project_sem_3/Views/HomeInsurance/Order.cshtml
@@ -761,7 +761,7 @@
     }
 
     .hd-info-pro {
-        background-color: #0b665a;
+        background-color: #0f75bd;
         color: #fff;
         font-family: inherit;
         text-transform: uppercase;
@@ -871,7 +871,7 @@
     .banner {
         width: 100%;
         height: 600px;
-        background-image: url(https://www.bennetts.co.uk/-/media/default-website/bike-insurance/motorbike-insurance/whats-included/bennetts-ultimate-cover-banner.ashx?h=360&w=780&la=en&hash=93DA48B7B1A1A5A492766AF4D77DC194FF258290);
+        background-image: url(https://assuredfinancialwellness.com.au/wp-content/uploads/2019/11/shutterstock_627812210.jpg);
         background-position: center center;
         background-size: cover;
     }
