--- a/Project_sem_3/Views/LifeInsurance/Order.cshtml
+++ b/Project_sem_3/Views/LifeInsurance/Order.cshtml
@@ -659,7 +659,7 @@
                    
                     name: {
                         required: "Please enter a valid name",
-                        minlength: "Địa chỉ ngắn vậy, chém gió ah?"
+                        minlength: "Your name is too short, please enter again"
                     },
                     PhoneNumber: {
                         required: " Please enter a valid Phone Number",
