--- a/Project_sem_3/Views/Shared/_Layout.cshtml
+++ b/Project_sem_3/Views/Shared/_Layout.cshtml
@@ -70,18 +70,20 @@
                     <div class="main-navigation" style="font-size:20px;    margin-top: 10px;">
                         <ul class="menu">
                             @*<li class="menu-item"><a href="about.html">About us</a></li>
-                                <li class="menu-item"><a href="insurance.html">Insurance plans</a></li>
-                                <li class="menu-item"><a href="resource.html">Resources</a></li>
-                                <li class="menu-item"><a href="contact.html">Contact</a></li>*@
+        <li class="menu-item"><a href="insurance.html">Insurance plans</a></li>
+        <li class="menu-item"><a href="resource.html">Resources</a></li>
+        <li class="menu-item"><a href="contact.html">Contact</a></li>*@
                             @*<li class="menu-item">@Html.ActionLink("Home", "Index", "Home")</li>*@
-                            <li class="menu-item">@Html.ActionLink("About us", "About", "Home")</li>
-                            @*<li class="menu-item">@Html.ActionLink("Insurance plans", "Insurance", "Home")</li>
-                                <li class="menu-item">@Html.ActionLink("Resource", "Resource", "Home")</li>*@
 
+                            @*<li class="menu-item">@Html.ActionLink("Insurance plans", "Insurance", "Home")</li>
+        <li class="menu-item">@Html.ActionLink("Resource", "Resource", "Home")</li>*@
+
+                            @*<li class="menu-item">@Html.ActionLink("Home", "Index", "Home")</li>*@
                             <li class="menu-item">@Html.ActionLink("Medical", "MedicalInsurance", "Home")</li>
                             <li class="menu-item">@Html.ActionLink("House", "HouseInsurance", "Home")</li>
                             <li class="menu-item">@Html.ActionLink("Motor", "MotorInsurance", "Home")</li>
                             <li class="menu-item">@Html.ActionLink("Life", "LifeInsurance", "Home")</li>
+                            <li class="menu-item">@Html.ActionLink("About us", "About", "Home")</li>
                             <li class="menu-item">@Html.ActionLink("Contact", "Contact", "Home")</li>
 
 
