--- a/Project_sem_3/Views/Home/Index.cshtml
+++ b/Project_sem_3/Views/Home/Index.cshtml
@@ -9,9 +9,9 @@
         <li style="width:100px" data-bg-image="https://www.homesteadins.com/wp-content/uploads/2019/05/homeowners-insurance-ohio.jpg">
             <div class="container">
                 <div class="slide-content">
-                    <h2 class="slide-title">Get your <strong>Life Insurance</strong></h2>
+                    <h2 class="slide-title">Get your <strong>House Insurance</strong></h2>
                     <p>Insurance is a means of protection from financial loss. It is a form of risk management, primarily used to hedge against the risk of a contingent or uncertain loss.The insured receives a contract, called the insurance policy.</p>
-                    <a href="" class="button">Get a quote</a>
+                    <a href="/Home/HouseInsurance" class="button">Get a quote</a>
                 </div>
             </div>
         </li>
@@ -22,7 +22,7 @@
                 <div class="slide-content">
                     <h2 class="slide-title">Get your <strong>Life Insurance</strong></h2>
                     <p>The amount of money charged by the insurer to the policyholder for the coverage set forth in the insurance policy is called the premium. If the insured experiences a loss which is potentially covered by the insurance policy.</p>
-                    <a href="#" class="button">Get a quote</a>
+                    <a href="/Home/lifeInsurance" class="button">Get a quote</a>
                 </div>
             </div>
         </li>
@@ -30,9 +30,9 @@
         <li data-bg-image="https://www.nyoooz.com/moxie_uploads/benefits-of-two-wheeler-insurance-renewal.jpg">
             <div class="container">
                 <div class="slide-content">
-                    <h2 class="slide-title">Get your <strong>Life Insurance</strong></h2>
+                    <h2 class="slide-title">Get your <strong>Motor Insurance</strong></h2>
                     <p>There is a multitude of different types of insurance policies available, and virtually any individual or business can find an insurance company willing to insure them—for a price. The most common types of personal insurance.</p>
-                    <a href="#" class="button">Get a quote</a>
+                    <a href="/Home/MotorInsurance" class="button">Get a quote</a>
                 </div>
             </div>
         </li>
@@ -40,9 +40,9 @@
         <li data-bg-image="https://img.freepik.com/free-photo/hand-chooses-emoticon-icons-healthcare-medical-symbol-wooden-block-healthcare-medical-insurance-concept_39665-204.jpg?size=626&ext=jpg">
             <div class="container">
                 <div class="slide-content">
-                    <h2 class="slide-title">Get your <strong>Life Insurance</strong></h2>
+                    <h2 class="slide-title">Get your <strong>Medical Insurance</strong></h2>
                     <p>Businesses require special types of insurance policies that insure against specific types of risks faced by a particular business. For example, a fast food restaurant needs a policy that covers damage or injury that occurs.</p>
-                    <a href="#" class="button">Get a quote</a>
+                    <a href="/Home/MedicalInsurance" class="button">Get a quote</a>
                 </div>
             </div>
         </li>
