--- a/Project_sem_3/Views/Home/MedicalInsurance.cshtml
+++ b/Project_sem_3/Views/Home/MedicalInsurance.cshtml
@@ -183,7 +183,7 @@
     .banner {
         width: 100%;
         height: 600px;
-        background-image: url("/Content/dummy/Medical_1.jpg");
+        background-image: url("https://opisy-gg.com/wp-content/uploads/2019/11/Medical-Insurance-Mental.jpg");
         background-position: center center;
         background-size: cover;
     }
