--- a/Project_sem_3/Views/Home/MotorInsurance.cshtml
+++ b/Project_sem_3/Views/Home/MotorInsurance.cshtml
@@ -174,7 +174,7 @@
     .banner {
         width: 100%;
         height: 600px;
-        background-image: url("/Content/dummy/motor_Insurance.jpg");
+        background-image: url("https://kimeosmithinsurance.com/files/2018/10/bigstock_motorbike_on_the_road_riding_228325000.jpg?w=1060&h=795&a=t");
         background-position: center center;
         background-size: cover;
     }
