--- a/Project_sem_3/Views/Home/Index.cshtml
+++ b/Project_sem_3/Views/Home/Index.cshtml
@@ -182,7 +182,7 @@
                         <figure><img style="height:184px" src="~/Content/dummy/Index_6.1.1.jpg" alt=""></figure>
 
                         <div class="date"><img src="~/Content/images/icon-calendar.png" alt="">03/09/2014</div>
-                        <h2 class="entry-title"><a href="#">There is a multitude of different types of insurance</a></h2>
+                        <h2 class="entry-title"><a href="/Home/HouseInsurance">There is a multitude of different types of insurance</a></h2>
                     </div>
                 </div>
                 <div class="col-md-3">
@@ -191,7 +191,7 @@
 
                         <figure><img style="height:184px" src="~/Content/dummy/Index_6.1.2.jpg" alt=""></figure>
                         <div class="date"><img src="~/Content/images/icon-calendar.png" alt="">03/09/2014</div>
-                        <h2 class="entry-title"><a href="#">There is a multitude of different types of insurance</a></h2>
+                        <h2 class="entry-title"><a href="/Home/MedicalInsurance">There is a multitude of different types of insurance</a></h2>
                     </div>
                 </div>
                 <div class="col-md-3">
@@ -201,7 +201,7 @@
                             <img style="height:184px" src="~/Content/dummy/Index_6.1.3.jpg" alt="">
                         </figure>
                         <div class="date"><img src="~/Content/images/icon-calendar.png" alt="">03/09/2014</div>
-                        <h2 class="entry-title"><a href="#">There is a multitude of different types of insurance</a></h2>
+                        <h2 class="entry-title"><a href="/Home/lifeInsurance">There is a multitude of different types of insurance</a></h2>
                     </div>
                 </div>
 
@@ -212,7 +212,7 @@
                             <img style="height:184px" src="~/Content/dummy/Index_6.1.4.jpg" alt="">
                         </figure>
                         <div class="date"><img src="~/Content/images/icon-calendar.png" alt="">03/09/2014</div>
-                        <h2 class="entry-title"><a href="#">There is a multitude of different types of insurance</a></h2>
+                        <h2 class="entry-title"><a href="/Home/MotorInsurance">There is a multitude of different types of insurance</a></h2>
                     </div>
                 </div>
 
