--- a/Project_sem_3/Views/MotorInsurance/Order.cshtml
+++ b/Project_sem_3/Views/MotorInsurance/Order.cshtml
@@ -151,7 +151,7 @@
                                                                 </div>
                                                                 <div _ngcontent-c5="" class="col-xs-8">
                                                                     <p _ngcontent-c5="" class="item-value">
-                                                                        <span _ngcontent-c5="" style="font-weight: bold;background: white;">@item.Price/year</span>
+                                                                        <span _ngcontent-c5="" style="font-weight: bold;background: white;">$@item.Price/year</span>
                                                                     </p>
                                                                 </div>
                                                             </div>
