--- a/Project_sem_3/Views/Home/HouseInsurance.cshtml
+++ b/Project_sem_3/Views/Home/HouseInsurance.cshtml
@@ -319,7 +319,7 @@
                     </ul>
                     <div class="block_button myriad_pro_semibold">
                         @*<a href="https://localhost:44362/HomeInsurance/Order">CHARGE & ORDER</a>*@
-                        <button style="background-color:crimson;color:white" onclick="location.href='http://www.example.com'" type="button">
+                        <button style="background-color:crimson;color:white" onclick="location.href='/HomeInsurance/Order'" type="button">
                             Charge & Order
                         </button>
                     </div>
