--- a/Project_sem_3/Views/LifeInsurance/Order.cshtml
+++ b/Project_sem_3/Views/LifeInsurance/Order.cshtml
@@ -147,13 +147,20 @@
 
                         </select>
                     </div>
-                    <div class="form-group col-md-11">
+                    <div class="form-group col-md-7">
                         <label class="col-form-label">Identity Card</label>
                         <input type="text" name="IdentityCard" class="form-control" id="identityCard" autocomplete="off" placeholder="IdentityCard">
                     </div>
-                    <div class="form-group col-md-12">
+                    <div class="form-group col-md-5">
                         <label class="col-form-label">Marital Status</label>
-                        <input type="text" name="MaritalStatus" class="form-control" id="marital" autocomplete="off" placeholder="MaritalStatus">
+                        <select id="job" name="Job" required="" class="form-control form-control-long default ng-pristine ng-valid ng-touched">
+                            @*<input type="text" name="MaritalStatus" class="form-control" id="marital" autocomplete="off" placeholder="MaritalStatus">*@
+                            <option disabled="" selected="" value="">Marital Status</option>
+                            <!---->
+                            <option value="1">đã kết hôn </option>
+                            <option value="2"> chưa kết hôn </option>
+                           
+                        </select>
                     </div>
 
                     @*<div style="margin-top:-20px" class="form-group ">
@@ -552,6 +559,10 @@
     .frm .txt {
         padding: 14px;
         border: solid 2px #c8c8c8;
+    }
+
+    .form-control{
+            height: 45px;
     }
 
     .frm .form-control {
